--- a/templates/GetEmp.html
+++ b/templates/GetEmp.html
@@ -5,84 +5,84 @@
     <title>Get Employee Information</title>
 </head>
 <style>
-.nav-area {
-    float: right;
-    list-style: none;
-    margin-top: 20px;
-    padding-right: 10px;
-}
-
-.nav-area li {
-    display: inline-block;
-}
-
-.nav-area li a {
-    color: #333;
-    text-decoration: none;
-    padding: 5px 20px;
-    font-size: 14px;
-}
-
-.nav-area li a:hover {
-    background: #333;
-    color: #fff;
-}
-
-#logo img {
-    width: 150px;
-    float: left;
-    padding-left: 5%;
-    padding-top: 2%;
-}
-
-body {
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: white;
-}
-
-header {
-    width: 98%;
-    height: 100%;
-}
-
-h1{
-    margin-top: 8%;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-style: italic;
-}
-
-input:hover{
-    background-color: turquoise;
-}
-
-div{
-	font-family: 'Courier New', Courier, monospace;
-	font-size: 25px;
-	color: rgb(109, 51, 51);
-}
-
-button{
-    background: grey; 
-    height: 45px; 
-    width: 150px; 
-    color: white;  
-    font-size: 20px; 
-    font: oblique;
-    border-radius: 25px;
-    border-color: #333;
-}
-
-button:hover{
-    background: rgb(174, 220, 244);
-    color: red;
-}
+    .nav-area {
+        float: right;
+        list-style: none;
+        margin-top: 20px;
+        padding-right: 10px;
+    }
+    
+    .nav-area li {
+        display: inline-block;
+    }
+    
+    .nav-area li a {
+        color: #333;
+        text-decoration: none;
+        padding: 5px 20px;
+        font-size: 14px;
+    }
+    
+    .nav-area li a:hover {
+        background: #333;
+        color: #fff;
+    }
+    
+    #logo img {
+        width: 150px;
+        float: left;
+        padding-left: 5%;
+        padding-top: 2%;
+    }
+    
+    body {
+        margin: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-color: white;
+    }
+    
+    header {
+        width: 98%;
+        height: 100%;
+    }
+    
+    h1 {
+        margin-top: 8%;
+        font-family: Georgia, 'Times New Roman', Times, serif;
+        font-style: italic;
+    }
+    
+    input:hover {
+        background-color: turquoise;
+    }
+    
+    div {
+        font-family: 'Courier New', Courier, monospace;
+        font-size: 25px;
+        color: rgb(109, 51, 51);
+    }
+    
+    button {
+        background: grey;
+        height: 45px;
+        width: 150px;
+        color: white;
+        font-size: 20px;
+        font: oblique;
+        border-radius: 25px;
+        border-color: #333;
+    }
+    
+    button:hover {
+        background: rgb(174, 220, 244);
+        color: red;
+    }
 </style>
 <header>
     <div id="logo">
-        <img src="{{url_for('static', filename='images/logo2.JPG')}}">
+        <img src="{{url_for('Img', filename='images/logo2.JPG')}}">
     </div>
 
     <ul class="nav-area">
@@ -96,8 +96,9 @@ button:hover{
 </header>
 <center>
     <font color="black" size="5" style="font-family: avenir">
+
         <body bgcolor="lightgrey">
-            
+
             <form action="/fetchInfo" autocomplete="on" method="POST" enctype="multipart/form-data">
 
                 <h1 style="color: rgb(154, 71, 255)"><u>Get Employee Information</u></h1>
