--- a/templates/GetEmpOutput.html
+++ b/templates/GetEmpOutput.html
@@ -1,85 +1,86 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title>Employee Information</title>
+    <title>Employee Information</title>
 </head>
 <style>
-.nav-area {
-    float: right;
-    list-style: none;
-    margin-top: 20px;
-    padding-right: 10px;
-}
-
-.nav-area li {
-    display: inline-block;
-}
-
-.nav-area li a {
-    color: #333;
-    text-decoration: none;
-    padding: 5px 20px;
-    font-size: 14px;
-}
-
-.nav-area li a:hover {
-    background: #333;
-    color: #fff;
-}
-
-#logo img {
-    width: 150px;
-    float: left;
-    padding-left: 5%;
-    padding-top: 2%;
-}
-
-body {
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: white;
-}
-
-header {
-    width: 98%;
-    height: 100%;
-}
-
-h1{
-    margin-top: 8%;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-style: italic;
-}
-
-a:hover{
-	background: rgb(174, 220, 244);
-	color: red;
-}
-
-.button {
-	background: grey; 
-	height: 65px; 
-	width: 150px; 
-	color: white;  
-	font-size: 30px; 
-	font: oblique;
-	text-decoration: none;
-	border-style: solid;
-	border-color: black;
-	border-radius: 15px;
-}
-
-div{
-	font-family: 'Courier New', Courier, monospace;
-	font-size: 25px;
-	color: brown;
-}
+    .nav-area {
+        float: right;
+        list-style: none;
+        margin-top: 20px;
+        padding-right: 10px;
+    }
+    
+    .nav-area li {
+        display: inline-block;
+    }
+    
+    .nav-area li a {
+        color: #333;
+        text-decoration: none;
+        padding: 5px 20px;
+        font-size: 14px;
+    }
+    
+    .nav-area li a:hover {
+        background: #333;
+        color: #fff;
+    }
+    
+    #logo img {
+        width: 150px;
+        float: left;
+        padding-left: 5%;
+        padding-top: 2%;
+    }
+    
+    body {
+        margin: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-color: white;
+    }
+    
+    header {
+        width: 98%;
+        height: 100%;
+    }
+    
+    h1 {
+        margin-top: 8%;
+        font-family: Georgia, 'Times New Roman', Times, serif;
+        font-style: italic;
+    }
+    
+    a:hover {
+        background: rgb(174, 220, 244);
+        color: red;
+    }
+    
+    .button {
+        background: grey;
+        height: 65px;
+        width: 150px;
+        color: white;
+        font-size: 30px;
+        font: oblique;
+        text-decoration: none;
+        border-style: solid;
+        border-color: black;
+        border-radius: 15px;
+    }
+    
+    div {
+        font-family: 'Courier New', Courier, monospace;
+        font-size: 25px;
+        color: brown;
+    }
 </style>
 <header>
     <div id="logo">
-        <img src="{{url_for('static', filename='images/logo2.JPG')}}">
+        <img src="{{url_for('Img', filename='images/logo2.JPG')}}">
     </div>
 
     <ul class="nav-area">
@@ -92,37 +93,34 @@ div{
     <!-- <button href="/about" style="background: grey;margin-left: 1150px; height: 45px; width: 200px; color: white; size: 5; font:oblique;">About Us</a> -->
 </header>
 <center>
-	<font color="black" size="5" style="font-family: avenir">
+    <font color="black" size="5" style="font-family: avenir">
 
-		
 
-		<body bgcolor="lightgrey">
-			<h1 style="color: rgb(154, 71, 255)"><u>Employee Information</u></h1>
-			<form action="/getempoutput" autocomplete="on" method = "GET">
 
-				<div>
-                    <img src='{{ image }}' alt="Employee Image"  width="500" height="400" style="border-style: double;"><br><br>
+        <body bgcolor="lightgrey">
+            <h1 style="color: rgb(154, 71, 255)"><u>Employee Information</u></h1>
+            <form action="/getempoutput" autocomplete="on" method="GET">
 
-			  		Employee ID:<br> {{ id }}<br><br>
+                <div>
+                    <img src='{{ image }}' alt="Employee Image" width="500" height="400" style="border-style: double;"><br><br> Employee ID:<br> {{ id }}<br><br> Name:
 
-			  		Name:<br>{{ name }}<br><br>
+                    <br>{{ name }}<br><br> Payscale:
 
-			  		Payscale:<br> {{ payscale }} <br><br>
+                    <br> {{ payscale }} <br><br> Department:
 
-			  		Department:<br> {{ department }} <br><br>
+                    <br> {{ department }} <br><br> Hire Date:<br> {{ hire_date }} <br><br>
 
-					Hire Date:<br> {{ hire_date }} <br><br>
 
-					
-					<a href="{{ url_for('getInfo') }}" class="button">ReSET</a>
-					<br><br><br><br>
+                    <a href="{{ url_for('getInfo') }}" class="button">ReSET</a>
+                    <br><br><br><br>
 
-			  	</div>
+                </div>
 
-			</form>
+            </form>
 
-		</body>
+        </body>
 
-	</font>
+    </font>
 </center>
+
 </html>
