--- a/templates/InsertEmp.html
+++ b/templates/InsertEmp.html
@@ -5,104 +5,106 @@
     <title>Add Employee Information</title>
 </head>
 <style>
-.nav-area {
-    float: right;
-    list-style: none;
-    margin-top: 20px;
-    padding-right: 10px;
-}
-
-.nav-area li {
-    display: inline-block;
-}
-
-.nav-area li a {
-    color: #333;
-    text-decoration: none;
-    padding: 5px 20px;
-    font-size: 14px;
-}
-
-.nav-area li a:hover {
-    background: #333;
-    color: #fff;
-}
-
-#logo img {
-    width: 150px;
-    float: left;
-    padding-left: 5%;
-    padding-top: 2%;
-}
-
-body {
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: white;
-}
-
-header {
-    width: 98%;
-    height: 100%;
-}
+    .nav-area {
+        float: right;
+        list-style: none;
+        margin-top: 20px;
+        padding-right: 10px;
+    }
     
-input {
-    margin-left: 100px;
-}
-
-.llll {
-    font-size: xx-large;
-    color: green;
-    font-family: 'Sansita Swashed', cursive;
-}
-
-h1 {
-    font-size: xx-large;
-    color: green;
-    font-family: 'Sansita Swashed', cursive;
-    margin-left: 10px;
-}
-
-fieldset {
-    padding: 10px;
-}
-
-.upperpart {
-    display: flex;
-}
-input:hover{
-    background-color: turquoise;
-}
-
-button[type=submit],button[type=reset] {
-    font-size: x-large;
-    background-color: orange;
-    border: 1px solid orange;
-    border-radius: 50px;
-    color: white;
-    padding: 5px;
-    margin: 10px;
-    cursor: pointer;
-    float: right;
-}
-
-button:hover{
-    background-color: darkblue;
-}
-
-#display_image {
-    width: 400px;
-    height: 225px;
-    border: 1px solid black;
-    background-position: center;
-    background-size: cover;
-}
+    .nav-area li {
+        display: inline-block;
+    }
+    
+    .nav-area li a {
+        color: #333;
+        text-decoration: none;
+        padding: 5px 20px;
+        font-size: 14px;
+    }
+    
+    .nav-area li a:hover {
+        background: #333;
+        color: #fff;
+    }
+    
+    #logo img {
+        width: 150px;
+        float: left;
+        padding-left: 5%;
+        padding-top: 2%;
+    }
+    
+    body {
+        margin: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-color: white;
+    }
+    
+    header {
+        width: 98%;
+        height: 100%;
+    }
+    
+    input {
+        margin-left: 100px;
+    }
+    
+    .llll {
+        font-size: xx-large;
+        color: green;
+        font-family: 'Sansita Swashed', cursive;
+    }
+    
+    h1 {
+        font-size: xx-large;
+        color: green;
+        font-family: 'Sansita Swashed', cursive;
+        margin-left: 10px;
+    }
+    
+    fieldset {
+        padding: 10px;
+    }
+    
+    .upperpart {
+        display: flex;
+    }
+    
+    input:hover {
+        background-color: turquoise;
+    }
+    
+    button[type=submit],
+    button[type=reset] {
+        font-size: x-large;
+        background-color: orange;
+        border: 1px solid orange;
+        border-radius: 50px;
+        color: white;
+        padding: 5px;
+        margin: 10px;
+        cursor: pointer;
+        float: right;
+    }
+    
+    button:hover {
+        background-color: darkblue;
+    }
+    
+    #display_image {
+        width: 400px;
+        height: 225px;
+        border: 1px solid black;
+        background-position: center;
+        background-size: cover;
+    }
 </style>
 <header>
     <div id="logo">
-        <img src="{{url_for('static', filename='images/logo2.JPG')}}">
+        <img src="{{url_for('Img', filename='images/logo2.JPG')}}">
     </div>
 
     <ul class="nav-area">
@@ -152,7 +154,7 @@ button:hover{
             </div>
 
             <center>
-                
+
                 <button type="submit">UPDATE DATABASE</button>
                 <button type="reset">RESET</button>
             </center>
